# parallel-computing-and-multimedia-processing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
srs/coursework/: analyze_results.py  main.py  neat_runner.py  opencl_utils.py  quick_test.py  simple_neat_visualizer.py  visualization.py  visualize_actual_results.py  wann.py  wann_backup.py
srs/coursework/config/: neat_config.txt
srs/coursework/results/: neat_best_genome.pkl  neat_fitness.csv  wann_fitness.csv
srs/lab1/: main.cpp
srs/lab2/: main.py
srs/lab2/lab2_cuda /: GPU_Accelerated_Video_Emboss.ipynb
srs/lab2/lab2_opencl/: main.py  requirements_lab2.txt
srs/lab3/: mpi_web_scraper.py
srs/lab3/scripts/: run_tests.sh
